# AVI20

./: .gitignore  .gitmodules  CMakeLists.txt  CamrecDecoder.vcxproj  CamrecDecoder.vcxproj.filters  CamrecScreenStreamDecoder.filters  CamrecScreenStreamDecoder.vcxproj  CommonPropertyMacros.props  README.md  avi20.autopkg  avi20.sln  avi20.vcxproj  avi20.vcxproj.filters  packages.config
include/AVI20/: AVI20Defs.h  AVI20Types.h  Buffer.h  FCCParser.h  Namespace.h  Utl.h  WaveFormatEx.h
include/AVI20/Read/: ChunkHeader.h  FillAVIIndexInfo.h  FrameIndex.h  IStream.h  MediaStreamInfo.h  MediaStreamReader.h  MediaStreamReaderImpl.h  ParserBase.h  Reader.h  Stream.h  StreamPosRestorer.h  WindowsStream.h
include/AVI20/Tools/: Tools.h
include/AVI20/Write/: FillOutAVIIndex.h  IMediaStreamWriterParent.h  MediaStreamWriter.h  MediaStreamWriterImpl.h  RiffStream.h  StreamPosRestorerW.h  StreamW.h  Writer.h
src/: Buffer.cpp  FCCParser.cpp  Utl.cpp  WaveFormatEx.cpp
src/CamrecDecoder/: CamrecDecoder.cpp
src/CamrecScreenStreamDecoder/: CamrecScreenStreamDecoder.cpp  stdafx.cpp
src/Read/: ChunkHeader.cpp  FillAVIIndexInfo.cpp  FrameIndex.cpp  MediaStreamReader.cpp  MediaStreamReaderImpl.cpp  ParserBase.cpp  Reader.cpp  Stream.cpp  StreamPosRestorer.cpp  WindowsStream.cpp
src/Tools/: Tools.cpp
src/Write/: FillOutAVIIndex.cpp  MediaStreamWriter.cpp  MediaStreamWriterImpl.cpp  RiffStream.cpp  StreamPosRestorerW.cpp  StreamW.cpp  Writer.cpp
